--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <br>
   <br>
   <section>
-<iframe src="https://post-post.net/orphanx/" title="ORPHAN-X" width="1200" height="2000">
+<iframe src="https://post-post.net/orphanx/" title="ORPHAN-X" width="1200" height="2000" style="border:none;"></iframe>
 </main>
 
 <footer>
