--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <header><header><a class="active" href="https://desktoparchives.cargo.site/">DA</a>
   <a href="https://desktoparchives.cargo.site/DA-bios">ARTISTS</a>
   <a href="https://desktoparchives.cargo.site/Details">DETAILS</a></header></header>
+	<p><i>ISSUE 1</i></p>
 
 <main>
   <section>
