--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 
 <header><header><a class="active" href="https://desktoparchives.cargo.site/">DA</a>
   <a href="https://desktoparchives.cargo.site/DA-bios">ARTISTS</a>
-  <a href="https://desktoparchives.cargo.site/Details">DETAILS</a></header></header>
+  <a href="https://desktoparchives.cargo.site/Details">DETAILS</a>
 <text><i>ISSUE 1</i></text>
+	</header></header>
 
 <main>
   <section>
