--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <header><header><a class="active" href="https://desktoparchives.cargo.site/">DA</a>
   <a href="https://desktoparchives.cargo.site/DA-bios">ARTISTS</a>
   <a href="https://desktoparchives.cargo.site/Details">DETAILS</a>
-<text><i>ISSUE1</i></text>
+<text><i>ISSUE_1</i></text>
 	</header></header>
 
 <main>
