--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 June, September, and November 2021.</p>
 	<p>Dates: June 30th 2021-December 31st</p>
 	<p>Online | Warsaw | Berlin | Tbilisi</p>
-<p>contact: Desktop.archives.platform@gmail.com
-© desktoparchives </p>
+<p>contact: Desktop.archives.platform@gmail.com</p>
+<p>© desktoparchives </p>
 </footer>
 
 
