--- a/index.html
+++ b/index.html
@@ -16,11 +16,14 @@
 	</header></header>
 
 <main>
-  <section>
-    ←
-    New York / Berlin
-    →
-  </section>  
+  <section1>
+    ←Prev
+	  <br>
+    Next→
+  </section1>  
+	<section2>
+    New York, US / Berlin, DE
+  </section2> 
   <br>
   <br>
   <br>
