--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <main>
   <section1>
-    ←Prev
+    <a href="https://desktoparchives.info/Elisabeth-Smolarz">←Prev</a> 
 	  <br>
     Next→
   </section1>  
