--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
   <section1>
     <a href="https://desktoparchives.info/Elisabeth-Smolarz">←Prev</a> 
 	  <br>
-    Next→
+<a href="https://desktoparchives.info/Nechama-Winston">Next→</a> 
+ 
   </section1>  
 	<section2>
     New York, US 
