--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <section1>
     <a href="https://desktoparchives.info/Elisabeth-Smolarz">←Prev</a> 
 	  <br>
-<a href="https://desktoparchives.info/Nechama-Winston">Next→</a> 
- 
+	  <br>
+<a href="https://desktoparchives.info/Nechama-Winston">Next→</a>  <br>
   </section1>  
 	<section2>
     New York, US 
