--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
 </main>
 
 <footer>
+	<div id="grid">
+  <div id="item1"></div>
+  <div id="item2"></div>
+
 	 <br>
   <br>
  <p> Desktop Archives is an online publishing initiative and event series that showcases webworks from 10 different artists. The project is DIY and works outside of institutional networks. Together, the platform documents and archives unrests from the pandemic and the asynchronous, unequivalent emergences.</p> 
@@ -43,6 +47,8 @@ June, September, and November 2021.</p>
 	<p>Online | Warsaw | Berlin | Tbilisi</p>
 <p>contact: Desktop.archives.platform@gmail.com</p>
 <p>© desktoparchives </p>
+<div id="item3"></div>
+</div>
 </footer>
 
 
