--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 	</header></header>
 
 <main>
-  <section1>
+ <div class="a">
     <a href="https://desktoparchives.info/Elisabeth-Smolarz">←Prev</a> 
 	  <br>
 	  <br>
 <a href="https://desktoparchives.info/Nechama-Winston">Next→</a>  <br>
-  </section1>  
+	</div>  
 	<section2>
     New York, US 
   </section2> 
