--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 	  <br>
 <a href="https://desktoparchives.info/Nechama-Winston">Next→</a>  <br>
 	</div>  
-	<section2>
+	<section>
     New York, US 
-  </section2> 
+  </section> 
   <br>
   <br>
   <br>
