--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
 <main>
  <div class="a">
-    <a href="https://desktoparchives.info/Elisabeth-Smolarz">←Prev</a> 
+    <a href="https://desktoparchives.info/Tamar-Magradze">←Prev</a> 
 	  <br>
 	  <br>
-<a href="https://desktoparchives.info/Nechama-Winston">Next→</a>  <br>
+<a href="https://desktoparchives.info/Elisabeth-Smolarz">Next→</a>  <br>
 	</div>  
 	<section>
     New York, US 
