--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <main>
  <div class="a">
-    <a href="https://desktoparchives.info/Tamar-Magradze">←Prev</a> 
+    <a href="https://desktoparchives.info/Aliaksandra-Osipava">←Prev</a> 
 	  <br>
 	  <br>
 <a href="https://desktoparchives.info/Elisabeth-Smolarz">Next→</a>  <br>
